# voicr

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: cli.rs  config.rs  daemon.rs  hotkey.rs  main.rs  paths.rs  setup.rs
src/audio_toolkit/: mod.rs  sound.rs
src/audio_toolkit/audio/: device.rs  mod.rs  recorder.rs  resampler.rs  utils.rs
src/audio_toolkit/vad/: mod.rs  silero.rs  smoothed.rs
src/managers/: history.rs  mod.rs  model.rs  transcription.rs
