[package]
name = "voicr"
version = "0.1.0"
edition = "2021"
description = "Headless speech-to-text daemon and CLI"
license = "MIT"

[[bin]]
name = "voicr"
path = "src/main.rs"

[features]
default = []
# Enable Whisper support (requires: sudo apt install libvulkan-dev glslang-tools)
whisper = ["transcribe-rs/whisper"]

# Pin ort to rc.10 to match vad-rs and transcribe-rs requirements
[dependencies.ort]
version = "=2.0.0-rc.10"

[dependencies.ndarray]
version = "0.16.1"

[dependencies]
# Audio
cpal = "0.16.0"
rubato = "0.16.2"
hound = "3.5.1"

# VAD
vad-rs = { git = "https://github.com/cjpais/vad-rs", rev = "88b3a01f72f83a5d80d0e7ea9bacfc0d897fd03f", default-features = false }

# Transcription engines
# Whisper requires Vulkan dev headers (libvulkan-dev + glslang-tools).
# Enable it with: cargo build --features whisper
# Default: ORT-based engines only (Parakeet, Moonshine, SenseVoice, GigaAM)
transcribe-rs = { version = "0.2.8", features = ["parakeet", "moonshine", "sense_voice", "gigaam"] }

# Text processing
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
once_cell = "1"

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2.3"

# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP (model downloads)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Archive extraction
tar = "0.4"
flate2 = "1.0"

# Hotkey / paste
rdev = "0.5"
arboard = "3"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
dirs = "5"
ctrlc = { version = "3", features = ["termination"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
